--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,6 @@ img {
     padding-bottom: 100px;
 }
 
-.bg_color {
-    background-color: #f4f9fd;
-}
-
 .txt_align {
     text-align: center;
 }
@@ -229,6 +225,9 @@ nav {
 
 /*fisrst section benefit start*/
 
+.bg_color_first_section {
+    background-color: #f4f9fd;
+}
 
 .benefit_header {
     padding-top: 400px;
